# pulse

./: .gitignore  Cargo.toml  Dockerfile  PRD.md  README.md
.github/workflows/: ci.yml  release.yml
deploy/: docker-compose.yml
src/: auth.rs  compactor.rs  config.rs  erase.rs  event.rs  funnel.rs  ingest.rs  lib.rs  main.rs  mcp.rs  query.rs  wal.rs
tests/: integration.rs
