[package]
name = "pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
datafusion = "54.0.0"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
subtle = "2.6.1"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
